6.0.11
	* Adjust deb packaging. Check /etc/lsb-release and include the
	distribution release in the deb package version, to faciliate
	updating to the same version of the package in an updated release.

	Fix build dependencies.

6.0.10

2022-05-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* gcc 12 and autotools update. Fix minor use after free bugs:
	when showing links to decoded PGP attachments, and if the
	calendar module is enabled, and the calendaring server runs out
	of disk space; when updating the index file. Freed memory was
	read before any additional allocations took place.

2022-04-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add scripts to create installable .deb packages, update
	documentation.

2022-03-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.ac: Search for either "ispell" or "aspell".

2022-01-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* maildir.c (maildir_checknew): use maildir_getnew.

	* Fix minor memory leaks.

6.0.9

2022-01-16  Arjen de Korte <build+github@de-korte.org>

	* Fix linking failure on some Linux distributions.

6.0.8

2022-01-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix linking failure on some Linux distributions.

6.0.7

2022-01-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Convert to PCRE2.

2021-05-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Minor code tweaks, make it compleable with -Wall -Werror.

6.0.6

2021-02-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* spec file: additional fixes.

6.0.5

2021-02-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* maildir/maildircache.c (create_cache_name): Fix UTF-8 addresses.

	* spec file: explicitly add dependencies on gzip.

2020-11-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* spec file: add BuildRequires: %{__make} (will be required in F34).

2020-10-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* sqwebmailwebpgp: update for current gpg version.

6.0.4

2020-05-18  Sam Varshavchik  <mrsam@courier-mta.com>
