@@ -60,7 +60,7 @@ saveLIBS="$LIBS"
 AC_CHECK_LIB(dl, dlopen, [ LIBDL="-ldl" ])
 LIBS="$saveLIBS"
 
-PKG_CHECK_MODULES(LIBIDN, libidn >= 0.0.0, [libidn=yes], [libidn=no])
+PKG_CHECK_MODULES(LIBIDN, libidn2 >= 0.0.0, [libidn=yes], [libidn=no])
 if test "$libidn" != "yes"
 then
 	AC_MSG_ERROR([libidn not found])
@@ -170,7 +170,7 @@ fi
 
 dnl Checks for library functions.
 
-PKG_CHECK_MODULES(LIBIDN, libidn >= 0.0.0, [libidn=yes], [libidn=no])
+PKG_CHECK_MODULES(LIBIDN, libidn2 >= 0.0.0, [libidn=yes], [libidn=no])
 
 if test "$libidn" != "yes"
 then
