@@ -22,7 +22,7 @@
 #include	<stdlib.h>
 #include	<ctype.h>
 #include	<netdb.h>
-#include	<idna.h>
+#include	<idn2.h>
 #if HAVE_DIRENT_H
 #include <dirent.h>
 #define NAMLEN(dirent) strlen((dirent)->d_name)
@@ -205,11 +205,11 @@ static int hostmatch(const struct tls_info *info, const char *domain)
 		}
 	}
 
-	if (idna_to_unicode_8z8z(verify_domain, &idn_domain1, 0)
+	if (idn2_to_unicode_8z8z(verify_domain, &idn_domain1, 0)
 	    != IDNA_SUCCESS)
 		idn_domain1=0;
 
-	if (idna_to_unicode_8z8z(p, &idn_domain2, 0)
+	if (idn2_to_unicode_8z8z(p, &idn_domain2, 0)
 	    != IDNA_SUCCESS)
 		idn_domain2=0;
 
@@ -1558,7 +1558,7 @@ SSL *tls_connect(SSL_CTX *ctx, int fd)
 
 		if (info->peer_verify_domain)
 		{
-			if (idna_to_unicode_8z8z(info->peer_verify_domain,
+			if (idn2_to_unicode_8z8z(info->peer_verify_domain,
 						 &idn_domain1, 0)
 			    != IDNA_SUCCESS)
 				idn_domain1=0;
