@@ -1,3 +1,7 @@
+2022-11-28  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Switch to libidn2.
+
 6.0.11
 	* Adjust deb packaging. Check /etc/lsb-release and include the
 	distribution release in the deb package version, to faciliate
